# ai-accelerators-course-2025

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.devcontainer/ascend/: devcontainer.json
.devcontainer/cuda/: devcontainer.json
.github/: CODEOWNERS  deadline.py  labeler.yml
.github/workflows/: labeler.yml  main.yml  static-analysis.yml
tasks/: CMakeLists.txt
tasks/01-softmax-cpu/Kozhevatov/: CMakeLists.txt  main.cpp
tasks/01-softmax-cpu/akulikov/: CMakeLists.txt  main.cpp
tasks/01-softmax-cpu/annenko/: CMakeLists.txt  main.cpp
tasks/01-softmax-cpu/chuvashev/: CMakeLists.txt  main.cpp
tasks/01-softmax-cpu/example/: CMakeLists.txt  main.cpp
tasks/01-softmax-cpu/kulagin/: CMakeLists.txt  main.cpp
tasks/01-softmax-cpu/nazarov/: CMakeLists.txt  main.cpp
tasks/01-softmax-cpu/rshtuni/: CMakeLists.txt  main.cpp
tasks/01-softmax-cpu/sharapov/: CMakeLists.txt  main.cpp
tasks/02-softmax-cuda/Kozhevatov/: CMakeLists.txt  main.cu
tasks/02-softmax-cuda/akulikov/: CMakeLists.txt  main.cu
tasks/02-softmax-cuda/annenko/: CMakeLists.txt  main.cu
tasks/02-softmax-cuda/chuvashev/: CMakeLists.txt  script.bat  script.py
tasks/02-softmax-cuda/chuvashev/include/: simd_utils.h  utils.h
tasks/02-softmax-cuda/chuvashev/src/: kernel.cu  main.cpp  simd_utils.cpp  utils.cpp
tasks/02-softmax-cuda/example/: CMakeLists.txt  main.cu
tasks/02-softmax-cuda/kulagin/: CMakeLists.txt  main.cu
tasks/02-softmax-cuda/nazarov/: CMakeLists.txt  main.cu
tasks/02-softmax-cuda/rshtuni/: CMakeLists.txt  main.cu
tasks/03-matmul-cuda/Kozhevatov/: CMakeLists.txt  main.cu
tasks/03-matmul-cuda/akulikov/: CMakeLists.txt  main.cu
tasks/03-matmul-cuda/annenko/: CMakeLists.txt  main.cu
tasks/03-matmul-cuda/chuvashev/: CMakeLists.txt
tasks/03-matmul-cuda/chuvashev/.scripts/: download_3rdpary_libs.bat
tasks/03-matmul-cuda/chuvashev/include/: utils.h
tasks/03-matmul-cuda/chuvashev/src/: main.cpp  utils.cpp
tasks/03-matmul-cuda/chuvashev/src/kernels/: kernel_cutlass.cu  kernel_mmgv1.cu  kernel_mmgv2.cu  kernel_softmax.cu  kernel_wmma.cu
tasks/03-matmul-cuda/example/: CMakeLists.txt  main.cu
tasks/03-matmul-cuda/kulagin/: CMakeLists.txt  main.cu
tasks/03-matmul-cuda/nazarov/: CMakeLists.txt  main.cu
tasks/03-matmul-cuda/rshtuni/: CMakeLists.txt  main.cu
tasks/04-softmax-ascend/: CMakeLists.txt
tasks/04-softmax-ascend/akulikov/: CMakeLists.txt  main.cpp  softmax_custom.cpp
tasks/04-softmax-ascend/akulikov/scripts/: gen_data.py  verify_result.py
tasks/04-softmax-ascend/chuvashev/: CMakeLists.txt  data_utils.h  main.cpp  run.sh  softmax_custom.cpp
tasks/04-softmax-ascend/chuvashev/cmake/: npu_lib.cmake
tasks/04-softmax-ascend/chuvashev/scripts/: gen_data.py  verify_result.py
tasks/04-softmax-ascend/example/: CMakeLists.txt  add_custom.cpp  main.cpp
tasks/04-softmax-ascend/kulagin/: .gitignore  CMakeLists.txt  data_utils.h  main.cpp  shared_data.h  softmax_custom_impl1.cpp  softmax_custom_impl2.cpp
tasks/04-softmax-ascend/kulagin/scripts/: gen_data.py  verify_result.py
tasks/04-softmax-ascend/rshtuni/: CMakeLists.txt  data_utils.h  main.cpp  run.sh  softmax_custom.cpp
tasks/04-softmax-ascend/rshtuni/cmake/: cpu_lib.cmake
tasks/04-softmax-ascend/rshtuni/scripts/: gen_data.py  verify_result.py
tasks/05-mixed-ascend/: CMakeLists.txt
tasks/05-mixed-ascend/akulikov/: .gitignore  CMakeLists.txt  README.md  main.cpp  matmul_leakyrelu_custom.cpp  matmul_leakyrelu_custom_tiling.cpp
tasks/05-mixed-ascend/akulikov/cmake/: cpu_lib.cmake
tasks/05-mixed-ascend/akulikov/scripts/: gen_data.py  verify_result.py
tasks/05-mixed-ascend/chuvashev/: CMakeLists.txt  data_utils.h  main.cpp  matmul_custom.cpp  matmul_custom_tiling.cpp  run.sh  softmax_custom.cpp
tasks/05-mixed-ascend/chuvashev/cmake/: cpu_lib.cmake  npu_lib.cmake
tasks/05-mixed-ascend/chuvashev/scripts/: gen_data.py  verify_result.py
tasks/05-mixed-ascend/example/: CMakeLists.txt  main.cpp  matmul_leakyrelu_custom.cpp  matmul_leakyrelu_custom_tiling.cpp
tasks/05-mixed-ascend/example/scripts/: gen_data.py
tasks/05-mixed-ascend/kulagin/: .gitignore  CMakeLists.txt  cleanup_dumps.sh  main.cpp  matmul_softmax_custom_naive.cpp  matmul_softmax_custom_naive_tiling.cpp  run.sh  shared_data.h
tasks/05-mixed-ascend/kulagin/cmake/: npu_lib.cmake
tasks/05-mixed-ascend/kulagin/scripts/: gen_data.py  verify_result.py
tasks/05-mixed-ascend/rshtuni/: CMakeLists.txt  data_utils.h  main.cpp  matmul_leakyrelu_custom.cpp  matmul_leakyrelu_custom_tiling.cpp  run.sh  softmax_custom.cpp
tasks/05-mixed-ascend/rshtuni/cmake/: cpu_lib.cmake  npu_lib.cmake
tasks/05-mixed-ascend/rshtuni/scripts/: gen_data.py
